# internal/roles/domain/dto.go
@@ -1,7 +1,10 @@
 // Package domain
 package domain
 
-import "github.com/google/uuid"
+import (
+	"github.com/alisonsandrade/go-start-project/pkg/pagination"
+	"github.com/google/uuid"
+)
 
 type CreateRoleRequest struct {
 	Name        string `json:"name" validate:"required,min=2,max=50"`
@@ -15,4 +18,10 @@ type UpdateRoleRequest struct {
 
 type ReplacePermissionsRequest struct {
 	PermissionIDs []uuid.UUID `json:"permission_ids"`
+}
+
+// RolePageResponse define a estrutura de resposta documentada no Swagger
+type RolePageResponse struct {
+	Data []RoleEntity    `json:"data"`
+	Meta pagination.Meta `json:"meta"`
 }
